# artemis

./: .gitignore  .kaba-repo  CMakeLists.txt  install-kaba-module.kaba  vcpkg.json  xmake.conf
.cmake/: Info.plist
artemis/: .kaba-package  artemis.kaba  data.kaba  fields.kaba  gfx.kaba  graph.kaba  grid.kaba  plot.kaba  profiler.kaba  render.kaba  session.kaba  yrenderer.kaba
artemis/nodes/canvas/: Canvas.kaba  LayoutGrid.kaba  LayoutNested.kaba  LayoutOverlay.kaba
artemis/nodes/data/: GenericPrint.kaba  GridPoints.kaba  ListSpectrum.kaba  Number.kaba  RandomNumber.kaba  RegularGrid.kaba  ScalarFieldSample.kaba  ScaleNumber.kaba  ScaleScalarField.kaba  ScaleVector.kaba  ScaleVectorField.kaba  Vector.kaba  VectorComponent.kaba  VectorFieldSample.kaba
artemis/nodes/field/: Divergence.kaba  Gradient.kaba  Laplace.kaba  MultiComponentFieldComponent.kaba  MultiComponentFieldFile.kaba  MultiFieldFile.kaba  (+6 more)
artemis/sharedlib/: .clang-format  CMakeLists.txt  vcpkg.json  xmake.conf
artemis/sharedlib/src/: Artemis.cpp  Artemis.h  LibExport.cpp  ModeDefault.cpp  ModeDefault.h  Session.cpp  Session.h
artemis/sharedlib/src/action/: Action.h  ActionManager.h  MergableAction.h
artemis/sharedlib/src/action/graph/: ActionGraphAddNode.cpp  ActionGraphAddNode.h  ActionGraphConnect.cpp  ActionGraphConnect.h  ActionGraphRemoveNode.cpp  ActionGraphRemoveNode.h  ActionGraphUnconnect.cpp  ActionGraphUnconnect.h  ActionNodeSetSetting.cpp  ActionNodeSetSetting.h  ActionNodesMove.cpp  ActionNodesMove.h
artemis/sharedlib/src/data/: Data.cpp  Data.h
artemis/sharedlib/src/data/field/: BasisFields.cpp  BasisFields.h  Field.cpp  Field.h  MultiComponentField.cpp  MultiComponentField.h  MultiField.cpp  MultiField.h  ScalarField.cpp  ScalarField.h  VectorField.cpp  VectorField.h
artemis/sharedlib/src/data/util/: ColorMap.h
artemis/sharedlib/src/graph/: AutoConnect.cpp  Graph.cpp  Graph.h  NodeFactory.cpp  NodeFactory.h
artemis/sharedlib/src/graph/canvas/: Canvas.cpp  Canvas.h  LayoutGrid.cpp  LayoutGrid.h  LayoutNested.cpp  LayoutNested.h  LayoutOverlay.cpp  LayoutOverlay.h
artemis/sharedlib/src/graph/draw2d/: FunctionPlot.cpp  FunctionPlot.h  Plotter.cpp  Plotter.h
artemis/sharedlib/src/graph/field/: Gradient.cpp  IsoSurface.cpp  Laplace.h  MultiComponentField.cpp  MultiComponentField.h  MultiField.cpp  MultiField.h  Rotation.cpp  ScalarField.cpp  ScalarField.h  VectorField.cpp  VectorField.h  VectorFieldLength.cpp
artemis/sharedlib/src/graph/grid/: RegularGrid.h
artemis/sharedlib/src/graph/list/: ListToVectors.cpp
artemis/sharedlib/src/graph/mesh/: SphereMesh.cpp  SphereMesh.h  TeapotMesh.cpp  TeapotMesh.h
artemis/sharedlib/src/graph/renderer/: DeformationRenderer.cpp  DeformationRenderer.h  GridRenderer.cpp  GridRenderer.h  ImageRenderer.cpp  ImageRenderer.h  MeshRenderer.cpp  MeshRenderer.h  PointListRenderer.cpp  PointListRenderer.h  RendererNode.cpp  RendererNode.h  SceneRenderer.cpp  SceneRenderer.h  VectorFieldRenderer.h  VolumeRenderer.cpp  VolumeRenderer.h
artemis/sharedlib/src/graph/value/: RandomNumber.cpp  RandomNumber.h
artemis/sharedlib/src/lib/dataflow/: Graph.cpp  Graph.h  Node.cpp  Node.h  Port.cpp  Port.h  Setting.cpp  Setting.h  Type.cpp
artemis/sharedlib/src/lib/kaba/lib/: lib_kaba.cpp
artemis/sharedlib/src/lib/kaba/parser/: AbstractParser.cpp
artemis/sharedlib/src/lib/linalg/: Matrix.cpp  Matrix.h  _kaba_export.cpp  _kaba_export.h
artemis/sharedlib/src/lib/polymesh/: Polygon.cpp  _kaba_export.cpp
artemis/sharedlib/src/lib/xhui/: TextLayout.cpp  TextLayout.h  Theme.cpp  _kaba_export.cpp
artemis/sharedlib/src/lib/ygraphics/: Context.h  ContextVulkan.cpp
artemis/sharedlib/src/lib/yrenderer/: _kaba_export.cpp
artemis/sharedlib/src/plugins/: PluginManager.cpp  PluginManager.h
artemis/sharedlib/src/processing/field/: Calculus.cpp  Calculus.h  IsoSurface.cpp  IsoSurface.h
artemis/sharedlib/src/processing/helper/: GlobalThreadPool.h
artemis/sharedlib/src/storage/: FormatArtemis.cpp  FormatArtemis.h  Storage.cpp  Storage.h
artemis/sharedlib/src/storage/format/: Format.h  FormatArtemis.cpp  FormatArtemis.h
artemis/sharedlib/src/view/: ArtemisWindow.cpp  ArtemisWindow.h  Canvas.cpp  Canvas.h  CodeEditor.cpp  CodeEditor.h  DefaultNodePanel.cpp  DefaultNodePanel.h  DrawingHelper.cpp  DrawingHelper.h  GraphEditor.cpp  GraphEditor.h  Mode.cpp  Mode.h  SceneRenderer.cpp  SceneRenderer.h
artemis/ui/: codeeditor.kaba  colormapdialog.kaba  defaultnodepanel.kaba  grapheditor.kaba  nodelistpanel.kaba
examples/: field.kaba  flow-lb-2d.kaba  generic.artemis  grid.kaba  guitar-fem.kaba  iso.kaba  maxwell.kaba  maxwell1d.kaba  maxwell2d.kaba  orbits.kaba  plot-list.kaba  plot-random.kaba  plot.kaba  string-fem.kaba  string-spectrum.artemis  teapot.kaba  tofu2d-fem.kaba  tofu3d-fem.kaba  vec.kaba
fake-api/: artemis.kaba
plugins/: artemis.kaba
plugins/artemis/: .kaba-package  artemis.kaba  data.kaba  fields.kaba  graph.kaba  grid.kaba
plugins/fem/: d1p1.kaba  d1p2.kaba  d2.kaba  d3.kaba  material.kaba
plugins/helper/: d2.kaba
plugins/linalg/: linalg.kaba
plugins/simulation/: Elastic2dFEM.kaba  Elastic3dFEM.kaba  MaxwellFDTD.kaba  OrbitRK.kaba  StringFEM.kaba  Test.kaba
src/: Artemis.cpp  Artemis.h  LibExport.cpp  ModeDefault.cpp  ModeDefault.h  Session.cpp  Session.h
src/action/: ActionGroup.cpp  ActionGroup.h  ActionManager.cpp  MergableAction.cpp
src/graph/: AutoConnect.cpp  AutoConnect.h  Graph.cpp  Graph.h  Node.cpp  Node.h  NodeFactory.cpp  NodeFactory.h  Port.cpp  Port.h  Setting.cpp  Setting.h
src/plugins/: PluginManager.cpp  PluginManager.h
src/storage/: Storage.cpp
src/view/: ActionController.cpp  ActionController.h  ArtemisWindow.cpp  ArtemisWindow.h  Canvas.cpp  Canvas.h  CodeEditor.cpp  CodeEditor.h  DefaultNodePanel.cpp  DefaultNodePanel.h  DrawingHelper.cpp  DrawingHelper.h  GraphEditor.cpp  GraphEditor.h  Mode.cpp  Mode.h  MultiView.cpp  MultiView.h  NodeListPanel.cpp  NodeListPanel.h  SceneRenderer.cpp  SceneRenderer.h
static/shader/: volume.shader
tests/: a.kaba  group.kaba
tools/: create_node_cpp.kaba
(+202 files in other folders)
